--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/dyc5828/sass-example/issues"
   },
-  "homepage": "https://github.com/dyc5828/sass-example#readme"
+  "homepage": "https://github.com/dyc5828/sass-example#readme",
+  "devDependencies": {
+    "laravel-elixir": "^6.0.0-14"
+  }
 }
