--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/dyc5828/sass-example#readme",
   "devDependencies": {
+    "gulp": "^3.9.1",
     "laravel-elixir": "^6.0.0-14"
   }
 }
