--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/dyc5828/sass-example#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
     "laravel-elixir": "^6.0.0-14"
   }
 }
